--- a/doc/latex/temp_comp/tempcomp.tex
+++ b/doc/latex/temp_comp/tempcomp.tex
@@ -185,5 +185,31 @@ So what to do? A general statement could be made that the curve fit function isn
 \\
 \end{loggentry}
 
+\begin{loggentry}{2021-08-18}{Temperature Calibration, Take Two}
+
+So I went and wrote the averaging algorithm as stated in last entry. It was fairly difficult, but I think it performs averaging as intended.
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=1\textwidth]{tcomp20200818-1.png}
+	\label{tcomp:4}
+	\caption{The relationship between temperature and power with equivalent 	temperature total power averaging. The curve fit function is shown in 			red.}
+\end{figure}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=1\textwidth]{tcomp20200818-2.png}
+	\label{tcomp:5}
+	\caption{Results of temperature compensation after equivalent 					temperature total power averaging applied.}
+\end{figure}
+
+The curve fit is noticably better, but the final compensated temperature graph is not. The shape of the graph has changed. It is less smooth than the original algorithm, even with the poorer curve fit. I also tried division instead of subtraction. The curve was identical in shape, just scaled differently.
+
+Looking closely at the graphs, it looks like the bumps of the compensated graph correlate to changes in slope of the original graph. I wonder if there is a temperature respose issue?
+
+I'm not sure what is the true cause is, but I'm considering making my own temperature lookup table. I think I need to set up the cooler experiment, and record temperature changing very slowly.
+\\
+\end{loggentry}
+
 \end{document}
 
